@@ -2,5 +2,6 @@
 
 require_once 'lib/functions.php';
 require_once 'lib/object.php';
+require_once 'lib/enumerable.php';
 
 ?>
