@@ -1,3 +1,6 @@
+2009-03-13 - Sean Huber (shuber@huberry.com)
+  * Add Enumerable (incomplete)
+
 2009-03-12 - Sean Huber (shuber@huberry.com)
   * Update README
   * Move doc/ directory
